@@ -10,8 +10,9 @@ class ScaffoldGenerator
   
   def build
   	ModelGenerator.new(model, attributes).build
-  	ControllerGenerator.new(model, @attributes).build
-  	FreemarkerGenerator.new(model, @attributes).build
+  	RepositoryGenerator.new(model, attributes).build
+  	ControllerGenerator.new(model, attributes).build
+  	FreemarkerGenerator.new(model, attributes).build
   end
   
   private 
