@@ -10,6 +10,7 @@ require File.dirname(__FILE__) + '/../lib/generators/base'
 require File.dirname(__FILE__) + '/../lib/generators/scaffold_generator/scaffold_generator'
 require File.dirname(__FILE__) + '/../lib/generators/scaffold_generator/base_scaffold'
 require File.dirname(__FILE__) + '/../lib/generators/scaffold_generator/model_generator/model_generator'
+require File.dirname(__FILE__) + '/../lib/generators/scaffold_generator/repository_generator/repository_generator'
 require File.dirname(__FILE__) + '/../lib/generators/scaffold_generator/controller_generator/controller_generator'
 require File.dirname(__FILE__) + '/../lib/generators/scaffold_generator/freemarker_generator/freemarker_generator'
 require File.dirname(__FILE__) + '/../lib/generators/app_generator/app_generator'
