@@ -2,6 +2,7 @@
 
 == New Features
 * Added Generic Repository.
+* Scaffold Repository to each Model.
 
 === 0.0.1.beta4 / 2010-07-16
 
